adição da imagem

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Uma pintura à frente do tempo</title>
 </head>
 <body>
+    <h1>Mona Lisa</h1>
+    <img src="mona_lisa..webp" alt="Mona Lisa, originalmente La Gioconda (em italiano), é um dos quadros mais famosos do mundo e a obra mais célebre de Leonardo da Vinci. Foi produzida no século XVI e atualmente está exposta no Museu do Louvre, na França. Pelo fato de a Mona Lisa ser tão afamada, existem muitas reproduções dela. Paródias, filmes, documentários e músicas, por exemplo, reproduzem esse ícone cultural reconhecido mundialmente.">
     
 </body>
 </html>
